--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,7 @@
 
         <!-- experimental -->
         <module>experimental/langchain4j-experimental-sql</module>
+        <module>langchain4j-agentic</module>
 
     </modules>
 
